--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "mockjs": "^1.0.1-beta3",
     "react-dom": "^16.6.1",
+    "react-emojione": "^5.0.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
@@ -23,9 +24,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "antd": "^3.10.4",
+    "antd": "^3.10.7",
     "jquery": "^3.3.1",
     "react": "^16.6.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1"
   }
